--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
@@ -73,22 +73,31 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group form-inline">
                                             <label class="col-sm-1 control-label">封面图片：</label>
 
                                             <div class="col-sm-10">
-                                                <div class="col-md-2">
-                                                    <div class="image-crop">
-                                                        <img id="pictureUrl" style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
-                                                             src="/img/300x200.png"/>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-3">
-                                                    <label title="上传图片" for="fileImage" class="btn btn-success">
-                                                        <input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
-                                                    </label>
-                                                    <span class="help-block m-b-none">推荐图片大小:300x200</span>
-                                                </div>
+                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
+                                                         src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                <label title="上传图片" for="fileImage" class="btn btn-success">
+                                                    <input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片
+                                                </label>
+                                                <span class="help-block m-b-none">推荐图片大小:300x200</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group form-inline">
+                                            <label class="col-sm-1 control-label">上传组图：</label>
+
+                                            <div class="col-sm-10">
+                                                <img style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
+                                                     src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                <img style="width: 150px;height: 100px"  th:src="*{touristImgUri}"
+                                                     src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                <!--<label title="上传图片" for="fileImage" class="btn btn-success">-->
+                                                    <!--<input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片-->
+                                                <!--</label>-->
+                                                <!--<span class="help-block m-b-none">推荐图片大小:300x200</span>-->
                                             </div>
                                         </div>
 
