--- a/tourist-web/src/main/webapp/view/manage/platform/activityType/activityTypeList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/activityType/activityTypeList.html
@@ -15,7 +15,8 @@
     <div class="panel panel-default">
         <div id="toolbar" class="btn-group">
             <button id="btn_add" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
+                    <span th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                          class="glyphicon glyphicon-plus" aria-hidden="true">新增</span>
             </button>
         </div>
 
@@ -32,7 +33,8 @@
             <tr>
                 <th data-field="id" data-align="center" data-sortable="true">序号</th>
                 <th data-field="activityName" data-align="center" data-sortable="true">活动名称</th>
-                <th data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-align="center">
+                <th th:if="${#authorization.expression('hasRole(''ROLE_MA'')')}"
+                    data-field="action" data-formatter="actionFormatter" data-events="actionEvents" data-align="center">
                     操作
                 </th>
             </tr>
