--- a/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
@@ -84,7 +84,7 @@
                     <div class="form-inline">
                         <input size="50" name="Date" placeholder="时间" class="form-control" type="text">
                         <button type="button" class="btn  btn-success ">查询</button>
-                        <button type="button" class="btn  btn-success ">导出明细</button>
+                        <!--<button type="button" class="btn  btn-success ">导出明细</button>-->
                     </div>
                 </div>
                 </div>
@@ -98,10 +98,19 @@
                         </ul>
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
+                                <div id="toolbar1" class="btn-group">
+                                    <select class="form-control">
+                                        <option value="basic">导出本页</option>
+                                        <option value="all">导出全部</option>
+                                        <option value="selected">选择导出</option>
+                                    </select>
+                                </div>
                                 <table class="table table-hover" data-toggle="table"
                                        data-url="../../../mock/supplier/orderDetailsList.json"
-                                       data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
-                                       data-page-number="1" data-page-size="10" data-query-params="getParams" data-toolbar="#toolbar">
+                                       data-method="get" data-side-pagination="server" data-pagination="true"
+                                       data-striped="true" data-page-number="1" data-page-size="10"
+                                       data-query-params="getParams" data-toolbar="#toolbar1"
+                                       data-show-export="true">
                                     <thead>
                                     <tr>
                                         <th data-field="orderNo" data-align="center">订单号</th>
@@ -122,10 +131,19 @@
                                 </table>
                             </div>
                             <div id="tab-2" class="tab-pane">
+                                <div id="toolbar2" class="btn-group">
+                                    <select class="form-control">
+                                        <option value="basic">导出本页</option>
+                                        <option value="all">导出全部</option>
+                                        <option value="selected">选择导出</option>
+                                    </select>
+                                </div>
                                 <table class="table table-hover" data-toggle="table"
                                        data-url="../../../mock/supplier/goodsStatisticsList.json"
-                                       data-method="get" data-side-pagination="server" data-pagination="true" data-striped="true"
-                                       data-page-number="1" data-page-size="10" data-query-params="getParams" data-toolbar="#toolbar">
+                                       data-method="get" data-side-pagination="server" data-pagination="true"
+                                       data-striped="true" data-page-number="1" data-page-size="10"
+                                       data-query-params="getParams" data-toolbar="#toolbar2"
+                                       data-show-export="true">
                                     <thead>
                                     <tr>
                                         <th data-field="touristName" data-align="center"
@@ -153,13 +171,22 @@
         </div>
     </div>
 </div>
+
 <script src="http://resali.huobanplus.com/cdn/jquery/3.1.1/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.7/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
+
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
+<script src="../../../assets/libs/bootstrap-table/bootstrap-table-export.js"></script>
+<script src="../../../assets/libs/bootstrap-table/tableExport.js"></script>
+
+
+
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>-->
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/moment.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/datetimepick/daterangepicker.js"></script>
-<script src="../../../assets/js/manage/supplier/salesStatistics.js"></script>
+<script src="../../../assets/js/manage/supplier/salesStatistics.js" th:inline="javascript"></script>
 </body>
 
 </html>
