--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -103,7 +103,7 @@
                     <a href="#"><i class="fa fa-edit"></i><span class="nav-label">设置</span>
                         <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a class="J_menuItem" href="supplierDetails.html"
+                        <li><a class="J_menuItem" href="supplierDetailsH+.html"
                                th:href="@{/supplier/modifySupplierInfo}">供应商信息</a>
                         </li>
                         <li><a class="J_menuItem" href="payeeAccountDetails.html"
