--- a/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/salesStatistics.html
@@ -115,9 +115,10 @@
                                        data-method="get" data-side-pagination="server" data-pagination="true"
                                        data-striped="true" data-page-number="1" data-page-size="10"
                                        data-query-params="getParams" data-toolbar="#toolbar1"
-                                       data-show-export="true">
+                                       data-show-export="true" data-click-to-select="true">
                                     <thead>
                                     <tr>
+                                        <th data-field="state" data-checkbox="true"></th>
                                         <th data-field="orderNo" data-align="center">订单号</th>
                                         <th data-field="touristName" data-align="center"
                                             data-formatter="touristNameFormatter">商品名称</th>
@@ -148,21 +149,17 @@
                                        data-method="get" data-side-pagination="server" data-pagination="true"
                                        data-striped="true" data-page-number="1" data-page-size="10"
                                        data-query-params="getParams" data-toolbar="#toolbar2"
-                                       data-show-export="true">
+                                       data-show-export="true" data-click-to-select="true">
                                     <thead>
                                     <tr>
+                                        <th data-field="state" data-checkbox="true"></th>
                                         <th data-field="touristName" data-align="center"
                                             data-formatter="touristNameFormatter">商品名称</th>
-                                        <th data-field="price" data-align="center"
-                                            data-sortable="true">单价</th>
-                                        <th data-field="rebate" data-align="center"
-                                            data-sortable="true">佣金比例</th>
-                                        <th data-field="buyTotal" data-align="center"
-                                            data-sortable="true">购买次数</th>
-                                        <th data-field="moneyTotal" data-align="center"
-                                            data-sortable="true">总金额</th>
-                                        <th data-field="commissionTotal" data-align="center"
-                                            data-sortable="true">总佣金</th>
+                                        <th data-field="price" data-align="center">单价</th>
+                                        <th data-field="rebate" data-align="center">佣金比例</th>
+                                        <th data-field="buyTotal" data-align="center">购买次数</th>
+                                        <th data-field="moneyTotal" data-align="center">总金额</th>
+                                        <th data-field="commissionTotal" data-align="center">总佣金</th>
                                     </tr>
                                     </thead>
                                 </table>
