--- a/tourist-web/src/main/webapp/view/manage/supplier/payeeAccountDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/payeeAccountDetailsH+.html
@@ -8,7 +8,7 @@
   ~ 2013-2016. All rights reserved.
   -->
 
-<html xmlns:th="http://www.thymeleaf.org" xmlns:res="http://resource.jiangcai.me" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
 
@@ -39,98 +39,103 @@
                 <div class="ibox-content">
                     <div class="wrapper-content">
 
-                        <form  class="form-horizontal" th:object="${account}">
-                            <input name="id" th:value="*{id}" type="hidden"/>
+                        <form action="payeeAccountDetailsH+.html" method="post"
+                              th:action="@{/supplier/saveCollectionAccount}" class="form-horizontal">
+                            <input name="id" th:value="${account.id}" type="hidden"/>
 
                             <div class="form-group">
                                 <label class="col-sm-1 control-label">账户类型：</label>
 
                                 <div class="col-sm-1">
 
-                                    <select name="touristType" class="form-control">
-                                        <option value="0" th:checked="${account.accountType.code}==0">支付宝</option>
-                                        <option value="1" th:checked="${account.accountType.code}==1">银行卡</option>
+                                    <select name="accountType" class="form-control">
+                                        <option value="0"
+                                                th:selected="${account.accountType!=null&&account.accountType.code==0}">支付宝
+                                        </option>
+                                        <option value="1"
+                                                th:selected="${account.accountType!=null&&account.accountType.code==1}">银行卡</option>
                                     </select>
                                 </div>
                             </div>
 
 
                             <div class="form-group">
-                                <label class="col-sm-1 control-label">供应商名称：</label>
+                                <label class="col-sm-1 control-label">姓名：</label>
 
                                 <div class="col-sm-4">
-                                    <input name="supplierName" th:value="*{supplierName}" type="text"
+                                    <input name="aliPayName" th:value="${account.aliPayName}" type="text"
                                            placeholder="供应商名称"
                                            class="form-control"/>
                                 </div>
                             </div>
 
-                            <div class="form-group form-inline">
-                                <label class="col-sm-1 control-label">营业执照：</label>
-                                <div class="col-sm-10">
-                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="*{businessLicenseUri}"
-                                         src="http://placehold.it/300x200?text=营业执照&size=200"/>
-                                    <label title="上传图片" for="fileImage" class="btn btn-success">
-                                        <input onchange="uploadImage()" type="file" accept="image/*"
-                                               id="fileImage" name="fileImage" class="hide"/> 上传营业执照
-                                    </label>
+                            <div class="form-group">
+                                <label class="col-sm-1 control-label">银行卡户名：</label>
+
+                                <div class="col-sm-4">
+                                    <input name="accountName" th:value="${account.accountName}" type="text"
+                                           placeholder="银行卡户名"
+                                           class="form-control"/>
                                 </div>
                             </div>
-
-
                             <div class="form-group">
-                                <label class="col-sm-1 control-label">所在地：</label>
+                                <label class="col-sm-1 control-label">支付宝账户：</label>
 
-                                <div class="col-sm-3">
-                                    <input placeholder="请选择所在地" data-toggle="city-picker"
-                                           name="address" th:value="*{address}"
-                                           type="text" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label">详细地址：</label>
-
-                                <div class="col-sm-10">
-                                    <input placeholder="详细地址" name="detailedAddress" th:value="*{detailedAddress}"
-                                           type="text" class="form-control"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-1 control-label">联系人：</label>
-
-                                <div class="col-sm-2">
-                                    <input name="contacts" th:value="*{contacts}" type="text"
-                                           placeholder="联系人"
+                                <div class="col-sm-4">
+                                    <input name="aliPayAccount" th:value="${account.aliPayAccount}" type="text"
+                                           placeholder="支付宝账户"
                                            class="form-control"/>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-1 control-label">联系电话：</label>
+                                <label class="col-sm-1 control-label">开户银行：</label>
 
-                                <div class="col-sm-2">
-                                    <input name="contactNumber" th:value="*{contactNumber}" type="text"
-                                           placeholder="联系电话"
+                                <div class="col-sm-4">
+                                    <input name="bank" th:value="${account.bank}" type="text"
+                                           placeholder="开户银行"
                                            class="form-control"/>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-1 control-label">备注：</label>
+                                <label class="col-sm-1 control-label">开户支行：</label>
 
-                                <div class="col-sm-2">
-                                     <textarea name="remarks" th:text="*{remarks}"
-                                               placeholder="备注"></textarea>
+                                <div class="col-sm-4">
+                                    <input name="bankBranch" th:value="${account.bankBranch}" type="text"
+                                           placeholder="开户支行"
+                                           class="form-control"/>
                                 </div>
                             </div>
+
+
+                            <div class="form-group">
+                                <label class="col-sm-1 control-label">身份证：</label>
+
+                                <div class="col-sm-4">
+                                    <input name="IDCard" th:value="${account.IDCard}" type="text"
+                                           placeholder="身份证"
+                                           class="form-control"/>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-sm-1 control-label">银行卡号：</label>
+
+                                <div class="col-sm-4">
+                                    <input name="bankCard" th:value="${account.bankCard}" type="text"
+                                           placeholder="银行卡号"
+                                           class="form-control"/>
+                                </div>
+                            </div>
+
+
 
                             <div class="hr-line-dashed"></div>
                             <div class="form-group">
                                 <p class="text-center">
-                                    <button onclick="submitForm(this)" class="btn btn-success"
-                                            type="button">保存</button>
+                                    <button  class="btn btn-success"
+                                            type="submit">保存</button>
                                 </p>
 
                             </div>
@@ -143,15 +148,13 @@
     </div>
 </div>
 
-
-
 <script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/bootstrap/3.3.5/bootstrap.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script src="../../../assets/libs/cityPicker/js/city-picker.data.js"></script>
 <script src="../../../assets/libs/cityPicker/js/city-picker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/ajaxfileupload/ajaxfileupload.js"></script>
-<script src="../../../assets/js/manage/supplier/supplierDetails.js" th:inline="javascript"></script>
+<script src="../../../assets/js/manage/supplier/payeeAccountDetails.js" th:inline="javascript"></script>
 </body>
 
 </html>
